# blog-weykon-zola

./: .dockerignore  .env.example  .env.production.template  .gitignore  .mcp.json  AUTH_IMPLEMENTATION_GUIDE.md  BUILD_STRATEGIES.md  CHINA_SETUP.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_BINARY.md  DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOYMENT.md  GOOGLE_OAUTH_SETUP.md  IMPLEMENTATION_GUIDE.md  IMPORT_SUMMARY.md  MIGRATION_QUICKSTART.md  Makefile  Makefile.build  QUICKSTART.md  README_NEW.md  TODO.md  blog-weykon.service  build.sh  check-deploy-status.sh  config.toml  content_analysis_report.md  deploy-docker.sh  deploy-france.sh  docker-compose.binary.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf.example  readme.md  setup-france.sh  upload-binary.sh  upload.sh  usage.md
backend/: COMPONENTS.md  Cargo.toml  Dockerfile  Dockerfile.china
backend/.sqlx/: query-2b4961600900eea198a0ad90bbfec482bd7866a6d55423ad940c48dc7693772d.json  query-3f630f5bc5c0f2cd5e4a35b6fe1f2966ad2c59e32aae40200ba8bffff72a8f5c.json  query-40499dcb8b6514d93f1051e79d8fec80ade8171164ac7f2121fb062d02083693.json  query-ea1ab10017b00962a566a652bfc8c9f58659f4e0895ddebc4a5c637b7cdbf553.json  query-eec70c072b803ced174fdbffc011d6cf08bef5670ab90db5194735101203792d.json
backend/migrations/: 20250401000001_initial_schema.sql
backend/src/: config.rs  db.rs  main.rs
backend/src/handlers/: admin.rs  api.rs  api_frontend.rs  auth.rs  mod.rs  mutters.rs  posts.rs  spa.rs
backend/templates/: base.html  blog-page.html  blog.html  editor.html  index.html  login.html  mutter-detail.html  mutters-list.html
(+135 files in other folders)
